Add welcome section and BasAdd link to Base Wallet Guidee Wallet Guide link
Added a welcome section with a guide link to the page.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
   <body>
     <h1>Hello, world 👋</h1>
     <p>This is my first GitHub project.</p>
+  </body><body>
+  <h1>Welcome to My Page 🌟</h1>
+  <p>My first web project on GitHub!</p>
+
+  <p>Check out my guide on Base Network:</p>
+  <a href="base-wallet-guide.html">Base Wallet Guide</a>
+  <body>
+  <h1>Welcome to My Page 🌟</h1>
+  <p>My first web project on GitHub!</p>
+
+  <p>Check out my guide on Base Network:</p>
+  <a href="base-wallet-guide.html">Base Wallet Guide</a>
   </body>
+    
 </html>
